Updated FilterInput, FilterOutput and access boundaries