@@ -10,15 +10,19 @@ package Classes.Filter;
 import java.util.*;
 
 public class FilterInput {
-    //define all the filter criterion
+    //define all the filter criterion - immutable class
+    //constant(s)
+    private static final int PAGE_SIZE = 5; // fixed page size
+    //filter fields
     private final List<String> animal_groups;
     private final List<String> animal_diets;
     private final List<String> animal_locations;
     private final Integer min_lifespan; //since the user can choose not to apply any lifespan filter in which case it
     // would allow it to be Null (also autoboxing)
     private final Integer max_lifespan;
-    int limit;  //max number of items to fetch per request
-    String cursor; //pagination token
+    //pagination fields
+    private final int pageSize;  //current number of items fetched for this request
+    private final String cursor; //pagination token
 
 
     // Private constructor - use builder. Why? --> in case we want to add more filter criterion
@@ -29,7 +33,7 @@ public class FilterInput {
         this.min_lifespan = builder.min_lifespan;
         this.max_lifespan = builder.max_lifespan;
         this.cursor = builder.cursor;
-        this.limit = builder.limit;
+        this.pageSize = PAGE_SIZE;
     }
 
     // Builder pattern for flexible construction
@@ -46,7 +50,6 @@ public class FilterInput {
         private Integer min_lifespan;
         private Integer max_lifespan;
         private String cursor;
-        private int limit = 5;
 
         public Builder groups(List<String> groups) {
             this.groups = groups != null ? groups : List.of();
@@ -54,12 +57,12 @@ public class FilterInput {
         }
 
         public Builder locations(List<String> locations) {
-            this.locations = locations != null ? locations : List.of(); //empty list
+            this.locations = locations != null ? locations : Collections.emptyList(); //empty list
             return this;
         }
 
         public Builder diets(List<String> diets) {
-            this.diets = diets != null ? diets : List.of();
+            this.diets = diets != null ? diets : Collections.emptyList();
             return this;
         }
 
@@ -75,11 +78,6 @@ public class FilterInput {
             return this;
         }
 
-        public Builder limit(int limit) {
-            this.limit = Math.max(1, limit);
-            return this;
-        }
-
         public FilterInput build() {
             return new FilterInput(this);
         }
@@ -92,7 +90,7 @@ public class FilterInput {
     public Integer getMinLifespan() { return min_lifespan; }
     public Integer getMaxLifespan() { return max_lifespan; }
     public String getCursor() { return cursor; }
-    public int getLimit() { return limit; }
+    public int getPageSize() { return pageSize; }
 
 
 }
